--- a/src/assignment/CMakeLists.txt
+++ b/src/assignment/CMakeLists.txt
@@ -9,7 +9,7 @@ project(assignment)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   rospy
-  std.msgs
+  std_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -104,7 +104,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES assignment
-#  CATKIN_DEPENDS rospy std.msgs
+#  CATKIN_DEPENDS rospy std_msgs
 #  DEPENDS system_lib
 )
 
