--- a/src/assignment/configs/base_local_planner_params.yaml
+++ b/src/assignment/configs/base_local_planner_params.yaml
@@ -13,8 +13,8 @@ TrajectoryPlannerROS:
   acc_lim_theta: 0.6
 
 # Goal Tolerance Parameters
-  xy_goal_tolerance: 0.15
-  yaw_goal_tolerance: 3.14
+  xy_goal_tolerance: 0.15 #0.1
+  yaw_goal_tolerance: 3.14 #0.05
 
 # Differential-drive robot configuration
   holonomic_robot: false
