--- a/src/assignment/configs/dwa_local_planner_params.yaml
+++ b/src/assignment/configs/dwa_local_planner_params.yaml
@@ -19,8 +19,8 @@ DWAPlannerROS:
   acc_lim_theta: 3.2 
 
 # Goal Tolerance Parametes
-  xy_goal_tolerance: 0.15
-  yaw_goal_tolerance: 3.14
+  xy_goal_tolerance: 0.2 #0.05
+  yaw_goal_tolerance: 3.14 #0.17
   latch_xy_goal_tolerance: false
 
 # Forward Simulation Parameters
