--- a/src/assignment/configs/dwa_local_planner_params.yaml
+++ b/src/assignment/configs/dwa_local_planner_params.yaml
@@ -20,19 +20,29 @@ DWAPlannerROS:
 
 # Goal Tolerance Parametes
   xy_goal_tolerance: 0.2 #0.05
-  yaw_goal_tolerance: 3.14 #0.17
+  yaw_goal_tolerance: 0.5 #3.14 #0.17
   latch_xy_goal_tolerance: false
 
 # Forward Simulation Parameters
-  sim_time: 2.0
+  sim_time: 2.0 #4.0 #2.0
   vx_samples: 20
   vy_samples: 0
   vth_samples: 40
   controller_frequency: 10.0
+# From the ros navguide paper
+  sim_granularity: 0.025 # Default for turtlebot sized base
 
 # Trajectory Scoring Parameters
-  path_distance_bias: 32.0
+
+# Weight for how much the local planner should stay close to the global path, higher values prefers
+# trajectories on the global path
+  path_distance_bias: 40 #32.0
+
+# Increasing this allows the robot to be less committed to the global path
+# Weight for how much the robot should attempt to reach the local goal.
   goal_distance_bias: 20.0
+
+# The weight for how much the robot should attempt to avoid obstacles. Too high and the robot is indecisive and stays in place.
   occdist_scale: 0.02
   forward_point_distance: 0.325
   stop_time_buffer: 0.2
